--- a/aber/software-engineering/lit-review/report.tex
+++ b/aber/software-engineering/lit-review/report.tex
@@ -611,7 +611,7 @@ The main algorithm used to parse ambiguous SCFGs is the Cocke-Younger-Kasami (CY
 
 The probabilities for the production rules can be computed from the probability of individual terminals reasonably efficiently using the inside-outside algorithm \cite{lari1990estimation}. The inside-outside algorithm defines how to compute the probability of a non-terminal, a production rule, and the total probability of all parse trees of a sequence. The algorithm is used so that all parse trees need not be enumerated and can be efficiently implemented using a dynamic programming table. The fitting of the probabilities used in the SCFG can be achieved using techniques such as expectation maximisation. 
 
-Note that the inside-outside algorithm can be seen as equivalent to the method used by McCaskill \cite{mccaskill1990equilibrium} to derive an equilibrium potential function based on thermodynamic parameters. The inside-outside algorithm could be seen as a generalisation to a generic potential function. In theory the thermodynamic parameters of McCaskill's model could be replaced by appropriate probabilities and achieve similar results.
+Note that the inside-outside algorithm can be seen as equivalent to the method used by McCaskill \cite{mccaskill1990equilibrium} to derive an equilibrium potential function based on thermodynamic parameters. The inside-outside algorithm could be seen as a generalisation to a generic potential function. In theory the thermodynamic parameters of McCaskill's model could be replaced by appropriate probabilities and achieve similar results. McCaskill's work is more like a special case of a SCFG. The MFE algorithm and the CYK algorithm are essentially the same. The differences between the two types of model are in how the weighting of the parameters are derived.
 
 The rest of this section provides an overview of various secondary structure prediction methods starting from early thermodynamic models and working forwards roughly chronologically to more recent probabilistic models.
 
@@ -649,7 +649,7 @@ While the Nussinov algorithm is guaranteed to produce the structure with maximum
 
 A much more biologically feasible criteria of determining whether two bases will pair is to minimise the free energy exhibited by a structure. This is the method proposed by Zuker and Stieglar \cite{zuker1981optimal}. The underlying algorithm shares a very similar formulation to the Nussinov method but with a few key differences. Firstly, their algorithm associates energy with the regions between bonds, as opposed to the bonds themselves (which is effectively what Nussinov uses). Secondly two energy functions are defined for subsequences of the string of nucleotides. These are the energy of the subsequence with and without base pairing between two given indices. Energy for the structure is recursively computed in a bottom-up fashion by taking the minimum energy at each point. The final computation should yield the secondary structure with minimum free energy (MFE).
 
-The MFE formulation can be used to produce much more biologically plausible structures in contrast to base pair maximisation. The thermodynamic weights are used to push the algorithm away from impossible or implausible structures (such as very short hairpin loops) and towards the correct structure by giving them highly positive weights. The method also has a certain biological backing because of its basis in thermodynamics which is more realistic to how cell processes work than base pair maximisation. 
+The MFE formulation can be used to produce much more biologically plausible structures in contrast to base pair maximisation. The thermodynamic weights are used to push the algorithm away from impossible or implausible structures (such as very short hairpin loops) and towards the correct structure by giving them highly positive weights. The method also had a certain biological backing because of its basis in thermodynamics which is more realistic to how cell processes work than base pair maximisation. 
 
 However, this method and thermodynamic based approaches in general, are limited by the accuracy of experimental studies of RNA. Many approaches rely on custom scoring rules or simply ignore aspects of reality in the model. For example, sequence dependance in RNA loop structures are often ignored due to the lack of experimental tools for assessing their free energy contribution \cite{do2006contrafold}. Many more recent prediction algorithms utilise the thermodynamic parameters used by Turner's group \cite{mathews1999expanded} as opposed to the weights used in the original paper. 
 
@@ -681,7 +681,7 @@ where
 
 More complicated interactions where bases pair at hairpin loops, internal loops, and junctions are handled in further derivations excluded for brevity. McCaskill also outlines how to reduce the computational time and space complexity of the final algorithm to be $O(n^3)$ and $O(n^2)$ respectively.
 
-Further contributions by the paper include the ``box matrix'' plot visualise the probabilities for each base pair predicted by the algorithm alongside the predicted optimal and experimental pairings. This takes the form of a matrix where each element is the probability that bases $i$ and $j$ will pair shown on a logarithmic scale in the upper left corner of the matrix. The lower right side of the matrix is then used to show the optimal pairings and optionally where the experimentally confirmed structure differs. 
+Further contributions by the paper included the ``box matrix'' plot visualise the probabilities for each base pair predicted by the algorithm alongside the predicted optimal and experimental pairings. This takes the form of a matrix where each element is the probability that bases $i$ and $j$ will pair shown on a logarithmic scale in the upper left corner of the matrix. The lower right side of the matrix is then used to show the optimal pairings and optionally where the experimentally confirmed structure differs. 
 
 The partition function formulation also encodes information about the phase transitions for the ensemble with respect to change in temperature. This provides another window into the structural properties of a RNA sequence.
 
@@ -689,7 +689,7 @@ Both McCaskill's partition function method and Zucker and Stieglar's MFE method 
 
 Matthews et al. improved on the set of thermodynamic parameters by extrapolating free energies obtained from analysis of representative molecules for loop structures and comparative sequence analysis for stability of tetraloops and estimate junction initiation parameters. Hofacker et al. contribute a collective package (ViennaRNA) that incorporates not only RNAfold, a parallelised MFE algorithm based on Zucker's, but also tools for inverse folding and comparison of secondary structures. Mfold in particular is often used as a baseline for secondary structure prediction. These methods are also often used in the calculation of secondary structure for the prediction of tertiary RNA structure \cite{laing2010computational, cruz2012rna, miao2015rna}.
 
-A more modern free energy minimisation approach was created by Deigan et al. \cite{deigan2009accurate} which incorporates additional experimental information from SHAPE experiments into their approach. Selective 2'-hydroxyl acylation analysed by primer extension (SHAPE) experiments report differences in local nucleotide flexibility. Base pairing reduces the local flexibility associated with a nucleotide which can be related to the probability that a particular nucleotide will form a base pair. The author's propose a ``pseudo-free energy change'' term which can be added to a regular free energy model. The term has the form
+A more modern free energy minimisation approach was created by Deigan et al. \cite{deigan2009accurate} which incorporates additional experimental information from SHAPE experiments into their approach. Selective 2'-hydroxyl acylation analysed by primer extension (SHAPE) experiments report differences in local nucleotide flexibility. Base pairing reduces the local flexibility associated with a nucleotide which can be related to the probability that a particular nucleotide will form a base pair. The author's proposed a ``pseudo-free energy change'' term which can be added to a regular free energy model. The term has the form
 
 \begin{equation}
 	\Delta G_{SHAPE}(i) = m \cdot ln[SHAPEreactivity(i) + 1] + b
@@ -699,7 +699,7 @@ where $i$ is the nucleotide number, $m$ is a parameter that penalises base pairi
 
 Another method based on the thermodynamic viewpoint is the work of Ding et al. \cite{ding2003statistical, ding2005rna}. Their work can largely be seen as a logical extension of McCaskill's work in \cite{mccaskill1990equilibrium}. Their first paper \cite{ding2003statistical} presents a method for drawing a statistically representative sample from the Boltzmann ensemble of possible secondary structures. This method allows them to gain valuable insights into the structure of RNA from a statistical mechanics point of view. The sampled distribution allows them to calculate information relating to RNA-RNA interaction sites, density of states, and to predict alternative structures.
 
-In \cite{ding2005rna} the author's continued their work to include prediction of the ``best'' secondary structure using the Boltzmann ensemble samples using cluster centroids. They first generate a sample from the ensemble using the method developed in \cite{ding2003statistical}. The samples are then clustered using a top-down method from \cite{rousseeuw1990finding}. They note that they use the CH index to choose the number of clusters and the base pair distance as the distance metric. They define the cluster centroid as the instance which has the shortest possible distance to all others in the cluster.
+In \cite{ding2005rna} the author's continued their work to include prediction of the ``best'' secondary structure using the Boltzmann ensemble samples using cluster centroids. They first generated a sample from the ensemble using the method developed in \cite{ding2003statistical}. The samples were then clustered using a top-down method from \cite{rousseeuw1990finding}. They noted that they use the CH index to choose the number of clusters and the base pair distance as the distance metric. They define the cluster centroid as the instance which has the shortest possible distance to all others in the cluster.
 
 Interestingly the authors note that there appears to be a fixed number of clusters regardless of sequence length. Furthermore the author's concluded that the MFE approach breaks down when the MFE structure is in the wrong cluster from the true structure. The limitation of this method is that the ensemble centroid is likely to be quite far removed from many sampled structures. The centroid for the cluster containing the correct structure will be far more accurate. However, it is difficult to determine the cluster containing the ``correct'' centroid without prior knowledge. On the other hand, probable sub-optimal structures are also of great interest and the list of centroids provides yet another method for accessing this information.
 
@@ -711,7 +711,7 @@ Using a partition function developed to support their coarse grained representat
 \label{subsec:probalistic-models}
 
 
-A notable early attempt at RNA secondary structure prediction using SCFGs is the work of Knudsen and Hein \cite{knudsen1999rna, knudsen2003pfold} in producing Pfold. In \cite{knudsen1999rna} they define a grammar which is so concise that it can be stated here in full:
+A notable early attempt at RNA secondary structure prediction using SCFGs is the work of Knudsen and Hein \cite{knudsen1999rna, knudsen2003pfold} in producing Pfold. In \cite{knudsen1999rna} they defined a grammar which is so concise that it can be stated here in full:
 
 \begin{equation}
 \begin{split}
@@ -756,7 +756,7 @@ CONTRAfold also diverts from the use of MFE/CYK approach to recovering the best 
 
 where $\hat{y}$ is a candidate structure and $y$ is the true structure. $accuracy_{\gamma}$ is defined as the number of correctly unpaired positions plus the product of $\gamma$ and the number of correctly paired positions. 
 
-Bindewald and Shapiro \cite{bindewald2006rna} created KNetFold which uses an entropy based measure that captures the mutual information between two aligned columns and a hierarchical network of k-nearest neighbour classifiers to infer secondary structure. 
+Bindewald and Shapiro \cite{bindewald2006rna} created KNetFold which used an entropy based measure that captures the mutual information between two aligned columns and a hierarchical network of k-nearest neighbour classifiers to infer secondary structure. 
 
 Their mutual information measure is the difference between information in aligned columns $R_i$ with the information of a column pair $R_{ij}$. The formula for the individual information in a column $i$ is 
 	
@@ -776,7 +776,7 @@ Feature vectors formed from a combination of the mutual information of aligned t
 
 Finally, one last classifier is created which takes the input from the single classifier from the previous level along with a thermodynamic consensus matrix. This matrix is created by calculating MFE for each sequence, the elements for which are then aligned, averaged, and weighted proportionally to the number of nonzero prediction probabilities for the given element.
 
-The authors report that for a very low number of aligned sequences (5) the predictions made are almost entirely based on the consensus matrix, but for a larger number of sequences their method enhanced those predicted from the consensus matrix. Notably their method was also able to successfully predict two pseudoknot interactions in a test sequence.
+The authors reported that for a very low number of aligned sequences (5) the predictions made are almost entirely based on the consensus matrix, but for a larger number of sequences their method enhanced those predicted from the consensus matrix. Notably their method was also able to successfully predict two pseudoknot interactions in a test sequence.
 
 Hamada et al. \cite{hamada2009prediction, sato2009centroidfold} produced CENTROIDfold, another comparative analysis method that can either use the output of CONTRAfold or the McCaskill probability matrix. The main contribution of the paper is a novel $\gamma$-centroid estimator which attempts to maximise the expected number of base pairs in opposition the the maximum likelihood estimate provided by MFE approaches. 
 
@@ -795,7 +795,7 @@ Where $\gamma$ is a trade off  between the sensitivity and selectivity of the al
 
 They also provided several further derivations that both prove the validity of their approach and show a generalisation of equation \ref{eq:gamma-centroid} for multiply aligned sequences.
 
-They propose that their method also has benefits over the MEA estimator. The MEA estimator maximises the expected accuracy with respect to each base, while the $\gamma$-centroid measures the expected accuracy with respect to each base pair. The authors note that this measure  then has the benefit that the best base pairs are supported by evidence provided by the many sub-optimal structures found in the distribution of potential structures rather than relying on very weak probabilities for many near optimal candidates given by the conventional MFE/probabilistic models. 
+They propose that their method also has benefits over the MEA estimator. The MEA estimator maximises the expected accuracy with respect to each base, while the $\gamma$-centroid measures the expected accuracy with respect to each base pair. The authors note that this measure then has the benefit that the best base pairs are supported by evidence provided by the many sub-optimal structures found in the distribution of potential structures rather than relying on very weak probabilities for many near optimal candidates given by the conventional MFE/probabilistic models. 
 
 They demonstrate through their experiments that the estimator performs better than prediction by conventional MFE/ML estimates and also shows improvement over the MEA method of CONTRAfold \cite{do2006contrafold}.
 
@@ -843,7 +843,7 @@ f(\Delta E) =
 
 where $\Delta E$ is the change in energy, $T$ is the temperature and $k$ is the Boltzmann constant. The algorithm is often combined with simulated annealing of the temperature parameter as sampling progresses to encourage convergence towards the global optimum. 
 
-Methods using folding simulations attempt to simulate how chains of nucleotides interact in order to fold into the correct structure using physics based potential functions. In contrast with fragment assembly based approaches the conformational space is typically sampled using molecular dynamics. Molecular dynamics approaches represent the molecular structure of an RNA as a three dimensional model parameterised similarly to the definitions given in section \ref{sec:rna-structure} (although usually with simplifications). The positions of atoms in the system are updated over time according to potential functions that define the forces acting on both bonded and non-bonded portions of the molecule. For short range non-bonded interactions the Lennard-Jones potential is common which is highly repulsive over a small distance and has an attractive well as the distance increases:
+Methods using folding simulations attempt to simulate how chains of nucleotides interact in order to fold into the correct structure using physics based potential functions. In contrast with fragment assembly based approaches the conformational space is typically sampled using molecular dynamics. Molecular dynamics (MD) approaches represent the molecular structure of an RNA as a three dimensional model parameterised similarly to the definitions given in section \ref{sec:rna-structure} (although usually with simplifications). They often use much more general MD frameworks such as AMBER \cite{case2010amber} for the actual simulation. The positions of atoms in the system are updated over time according to potential functions that define the forces acting on both bonded and non-bonded portions of the molecule. For short range non-bonded interactions the Lennard-Jones potential is common which is highly repulsive over a small distance and has an attractive well as the distance increases:
 
 \begin{equation}
 \label{eq:lennard-jones}
@@ -889,13 +889,13 @@ Ras and Baker \cite{das2007automated} created FARNA (Fragment Assembly of RNA). 
 
 To predict the structure of the RNA sequence fragments are drawn using the Metropolis-Hastings algorithm. Each draw chooses a random position in the molecule and replaces parameters of the segment with the parameters of a random segment. After the initial burn-in, the fragments are accepted according to the Metropolis criterion. Terms weighting coplanarity in the energy function are slowly stepped up over the course of the simulation.
 
-The authors note in their conclusions that the major limitations of their method are the MC algorithm used to sample the conformational space and the potential function. The work in \cite{das2007automated} is limited to sequences containing less than 40 nucleotides. They propose that incorporating secondary structure information may lead to performance gains for longer sequences. More importantly they state that the limiting factor of the model for short sequences is the accuracy of their potential function. The authors later extended this work to produce FARFAR (fragment assembly of RNA with full-atom refinement) \cite{das2010atomic}. This work aimed to correct inaccurate ranking by the low resolution potential by performing a full-atom molecular dynamics simulation. In this work they observed that the accuracy of the refinement dropped relative to the length of the sequence used. Sequences which did not converge to the native structure were chalked up to poor conformational sampling.
+The authors noted in their conclusions that the major limitations of their method are the MC algorithm used to sample the conformational space and the potential function. The work in \cite{das2007automated} is limited to sequences containing less than 40 nucleotides. They proposed that incorporating secondary structure information might lead to performance gains for longer sequences. More importantly they state that the limiting factor of the model for short sequences is the accuracy of their potential function. The authors later extended this work to produce FARFAR (fragment assembly of RNA with full-atom refinement) \cite{das2010atomic}. This work aimed to correct inaccurate ranking by the low resolution potential by performing a full-atom molecular dynamics simulation. In this work they observed that the accuracy of the refinement dropped relative to the length of the sequence used. Sequences which did not converge to the native structure were chalked up to poor conformational sampling.
 
 Parisien and Major\cite{parisien2008mc} created the MC-Fold/MC-Sym pipeline for secondary and tertiary structure prediction. In their method the MC-Fold program first generates a collection of sub-optimal secondary structures by combining multiple predefined structural motifs, referred to in the paper as nucleotide cyclic motifs (NCMs). All possible NCMs are enumerated but many potential structures are discarded as infeasible. MC-Fold uses traditional free energy minimisation and a scoring function determine the most likely secondary structures.
 
 The predicted secondary structure is then used as input for the tertiary structure prediction program MC-Sym. MC-Sym uses a predetermined 3D library of motifs using the same premise as secondary structure determination. As the enumeration of all possible 3D fragments is not computationally feasible a Las Vegas algorithm is used to sample potential motifs. The difference between a Las Vegas algorithm and a traditional Monte Carlo algorithm is that a Las Vegas algorithm always produces a valid candidate structure. Each 3D fragment is represented as a full atom model. The fragments are added such that they optimise the score generated during secondary structure determination.
 
-Cao and Chen \cite{cao2011physics} modified their secondary structure prediction tool Vfold \cite{cao2005predicting} (reviewed in section \ref{subsec:thermodynamic-models}) to predict tertiary structure using a combination of fragment assembly and molecular dynamical simulation. Vfold first predicts the secondary structure using a coarse grained model of RNA nucleotides. Using the secondary structure they search through a database of tertiary structural motifs for matches closely related to fragments of the 2D structure classified into hairpins, bulges, junctions etc. Based on the coarse grained 3D model built from motif fragments a full-atom model is created and then refined using energy minimisation in the AMBER \cite{case2010amber}  molecular dynamics program. 
+Cao and Chen \cite{cao2011physics} modified their secondary structure prediction tool Vfold \cite{cao2005predicting} (reviewed in section \ref{subsec:thermodynamic-models}) to predict tertiary structure using a combination of fragment assembly and molecular dynamical simulation. Vfold first predicts the secondary structure using a coarse grained model of RNA nucleotides. Using the secondary structure they search through a database of tertiary structural motifs for matches closely related to fragments of the 2D structure classified into hairpins, bulges, junctions etc. Based on the coarse grained 3D model built from motif fragments a full-atom model is created and then refined using energy minimisation in the AMBER \cite{case2010amber} molecular dynamics program. 
 
 \subsection{Folding Simulations}
 An notable attempt at using molecular dynamics for RNA structure prediction is the nucleic acid simulation tool (NAST) \cite{jonikas2009coarse}. NAST uses a coarse-grained representation of RNA nucleotides by approximating individual atoms with a single pseudo-atom in the location of the central C3$'$ atom. The NAST energy function makes the assumption that the geometry of the non-bonded regions in the secondary structure will follow a distribution closely following known RNA structures. Based on this assumption geometries between 2, 3, and 4 sequential nucleotides in known structures are used to create probability distributions for the angle, distance, and dihedral parameters. The energy function ($E$) is then derived based on the Boltzmann relationship:
@@ -907,7 +907,7 @@ An notable attempt at using molecular dynamics for RNA structure prediction is t
 
 Non-bonded interactions are modelled using the classic Lennard-Jones potential to prevent steric overlap for nucleotides separated by a distance greater than three. The geometry of the model is further constrained using the known secondary structure. Helices are constrained using one distance, one angle, and two dihedral parameters to help fix the model to the ideal helical shape. Long range tertiary interactions are modelled using an additional term in the energy potential, the strength of which is determined by the data source (known crystal structure: strong, experimental data: weak).
 
-Ding et al. \cite{ding2008ab} took a discrete molecular dynamics (DMD) approach to tertiary RNA structure modelling and created the iFoldRNA web server. In their method they approximate an RNA molecule using a ``bead on a string'' model where the backbone of the nucleotide is represented as simple collection of sugar, phosphate, or base molecules. This gives the final nucleotide model three ``beads'' attached to a ``thread'' of covalent bonds. Angular and dihedral constraints are also included in the model.
+Ding et al. \cite{ding2008ab} took a discrete molecular dynamics (DMD) approach to tertiary RNA structure modelling and created the iFoldRNA web server. In their method they approximated an RNA molecule using a ``bead on a string'' model where the backbone of the nucleotide is represented as simple collection of sugar, phosphate, or base molecules. This gives the final nucleotide model three ``beads'' attached to a ``thread'' of covalent bonds. Angular and dihedral constraints are also included in the model.
 
 The mechanics of the model differ from traditional molecular dynamics models by using only discrete functions as potentials in the simulation. This has the advantage that computation of an atom's velocity does not need to be recomputed at every time step. Only when the molecule jumps in relation to an interaction with a potential does the atom's velocity get kinematically updated. The method in \cite{ding2008ab} used discrete potentials incorporating phosphate-phosphate repulsion, hydrophobic interactions, and base stacking interactions. The free energy of loop structures used in \cite{mathews1999expanded} are also included to push the algorithm towards more compact, less loopy structures. The loop energy change associated with a bond forming is estimated using the metropolis-hastings algorithm.
 
@@ -929,7 +929,7 @@ This issue ties in with the major next problem facing progress with RNA structur
 
 The question then is where to go from here? The existing models obviously provide a good base, but future work could be directed towards including additional information such as the effects of long range interactions between nucleotides and the effect of RNA-protein or RNA-RNA contacts which are likely to affect the final structure. Successful attempts to include additional experimental data such as SHAPE chemistry have also been shown to be successful. Indeed, any technique that supply additional information and can reduce the size of the conformational space and constrain the bounds of the solution is likely to be useful.
 
-Another general trend across the papers reviewed is that models for tertiary structure have drifted towards a more coarse-grained approach. This appears to be partly due to necessity and partly to a better understanding of what the major contributing factors for folding are. This both speeds up slow predictions and allows for larger chains of nucleotides to be folded. However this simplification can often negatively impact the results. There is a trade off between using an accurate model and speed. Sadly the computational intensity scales too fast for even coarse-grained models to be quick enough at larger strands lengths. There also seems to have been a trend towards fragment assembly based approaches and a fusion of this with folding simulations. Progress in tertiary structure prediction is most likely going to be orientated towards better databases of known structural motifs combined with some form of coarse or full-atom refinement similar to FARNA. Further developments to refine  the energy potential used to achieve a balance of complexity versus efficiency will no doubt lead to RNA structure prediction reaching full maturity.
+Another general trend across the papers reviewed is that models for tertiary structure have drifted towards a more coarse-grained approach. This appears to be partly due to necessity and partly to a better understanding of what the major contributing factors for folding are. This both speeds up slow predictions and allows for larger chains of nucleotides to be folded. However this simplification can often negatively impact the results. There is a trade off between using an accurate model and speed. Sadly the computational intensity scales too fast for even coarse-grained models to be quick enough at larger strands lengths. There also seems to have been a trend towards fragment assembly based approaches and a fusion of this with folding simulations. This should not diminish the work already carried out with folding simulations. Much of the experimentation with different representations and potential functions are already helping to further RNA structure prediction and will obviously have important ramifications for the wider molecular modelling community. Progress in tertiary structure prediction is most likely going to be orientated towards better databases of known structural motifs combined with some form of coarse or full-atom refinement similar to FARNA. Further developments to refine the energy potential used to achieve a balance of complexity versus efficiency will no doubt lead to RNA structure prediction reaching full maturity.
 
 
 % if have a single appendix:
