--- a/aber/software-engineering/lit-review/report.tex
+++ b/aber/software-engineering/lit-review/report.tex
@@ -366,7 +366,7 @@
 % not capitalized unless they are the first or last word of the title.
 % Linebreaks \\ can be used within to get better formatting as desired.
 % Do not put math or special symbols in the title.
-\title{Automated Computational RNA Structure Prediction}
+\title{Computational RNA Structure Prediction}
 %
 %
 % author names and IEEE memberships
